--- a/Dissertation/part2.tex
+++ b/Dissertation/part2.tex
@@ -120,23 +120,7 @@ $N \bigtriangleup t$ -- основной период сигнала.
 
 В настоящее время быстрым алгоритмом является БПф, который вычисляет ДПФ $n$-мерного сигнала за время $O(n \log n)$. Существование алгоритмов ДПФ быстрее, чем БПФ.
 
-	
-
-
-
-\section{При анализе спектра многотонального сигнала с помощью дискретного преобразования Фурье в большинстве случаев имеются гармоники частота которых не кратна частоте основной гармоники. При оценке их параметров необходимо учитывать изменение спектра сигнала, связанное с ограниченной длиной выборки этого сигнала} \label{sec:ch2/sec3}
-
-
-
-
-
-
-
-\section{При анализе спектра сигнала с ограниченной выборкой необходимо использовать оконные функции, поскольку в противном случае сигнал будет взвешен прямоугольной оконной функцией с плохой частотной характеристикой} \label{sec:ch2/sec4}
-Требуется выполнить процедуру измерения частоты дискретизации. Для передискретизации необходимо знать частоту основной гармоники.
-Перед выполнением БПФ-отчеты взвешиваются и умножаются на симметричную функцию. Для периодических сигналов и синхронизированных отчетов лучше использовать прямоугольную функцию взвешивания. 
-
-\section{Нижняя граница Крамера-Рао} \label{sec:ch2/sec5} %АНТИПЛАГИАТ=
+\section{Нижняя граница Крамера-Рао} \label{sec:ch2/sec3} %АНТИПЛАГИАТ=
 % Альтман Е. А., Васеева Т. В., Александров А. В. ГРАНИЦА КРАМЕРА-РАО ДЛЯ АМПЛИТУДЫ ГАРМОНИКИ ПРИ ИСПОЛЬЗОВАНИИ ОКОННЫХ ФУНКЦИЙ //Динамика систем, механизмов и машин. – 2020. – Т. 8. – №. 2. – С. 145-152.
 % ВВЕДЕНИЕ 
 Для определения точности полученных результатов алгоритмы можно проверить с помощью неравенства Крамера-Рао. В зарубежной литературе чаще встречается термин Cramer-Rao lower bound (CRLB), что обозначает <<нижняя граница Крамера-Рао>>. В неравенстве Крамера-Рао сигнал имеет наибольшую величину дисперсии при некоторых условиях. Если неравенство Крамера-Рао преобразуется в равенство, то оценка параметров считается наилучшей. Отсюда следует, что дисперсия данной оценки самая маленькая из возможных. 
@@ -328,7 +312,7 @@ $A^{'}$ -- амплитуда гармоники исходного сигнал
 
 Используемый в работе подход для нахождения дисперсии результата алгоритма обработки сигналов может быть применен и для других задач обработки сигналов, в которых применяются оконные функции или другие предварительные преобразования сигнала.
 
-\section{Граница крамера-рао амплитуды однотонального сигнала для методов ее оценки с использованием оконных функций} \label{sec:ch2/sec6} %АНТИПЛАГИАТ=90,62%
+\section{Граница Крамера-Рао амплитуды однотонального сигнала для методов ее оценки с использованием оконных функций} \label{sec:ch2/sec4} %АНТИПЛАГИАТ=90,62%
 % Васеева Т. В., Альтман Е. А. ГРАНИЦА КРАМЕРА-РАО АМПЛИТУДЫ ОДНОТОНАЛЬНОГО СИГНАЛА ДЛЯ МЕТОДОВ ЕЕ ОЦЕНКИ С ИСПОЛЬЗОВАНИЕМ ОКОННЫХ ФУНКЦИЙ //Инновационные проекты и технологии в образовании, промышленности и на транспорте. – 2021. – С.
 
 Граница Крамера-Рао позволяет найти минимальную дисперсию оценки параметра сигнала. Для гармонических сигналов известны различные формулы, которые оценивают параметры: дисперсии амплитуды, частоты и фазы гармоник. Известные алгоритмы оценки показывают результаты выше границы Крамера-Рао. В проведенных исследованиях \cite{altman2020boundary} вывелась формула для оценки минимальной дисперсии амплитуды гармоник для методов, использующих оконные функции. В данной статье более подробно рассмотрели влияние различных окон на сигнал. Полученные результаты позволят решать задачи выбора оконной функции для спектрального анализа.
@@ -428,8 +412,6 @@ $T_{s}$ -- период.
 	\caption{Зависимость дисперсии оценки амплитуды от дисперсии шума с окном Кайзера ($\beta=15$).}\label{img:windows__kaiser15}
 \end{figure}
 
-
-
 %\begin{figure}[ht]
 %	\begin{minipage}[b][][b]{0.65\linewidth}\centering
 %		\includegraphics[width=0.5\linewidth]{estimate_amp_sin_kaiser(beta=15)_noise.png} \\ а)
@@ -478,11 +460,20 @@ $T_{s}$ -- период.
 Формула \ref{eq:equation11} оценки дисперсии амплитуды \cite{altman2020boundary} дает наилучший результаты при выборе весовых функций: Кайзера ($\beta=4$), Хэмминга, Барлетта. Так как результаты расчетов по формуле и результаты моделирование близки к границе Крамера-Рао. Зависимость дисперсии оценки амплитуды от дисперсии шума (табл. 2) показывают, что чем меньше коэффициент увеличения дисперсии, тем точнее результаты. Наихудший результат показало окно Кайзера с параметром $\beta=15$.
 
 
+\section{Вывод по разделу} \label{sec:ch2/sec5}
+\begin{enumerate}
+\item  Математической основой для анализа спектра сигналов является преобразование Фурье. Для дискретных сигналов применяется дискретное преобразование Фурье.
 
+\item  При анализе спектра многотонального сигнала с помощью дискретного преобразования Фурье в большинстве случаев имеются гармоники частота которых не кратна частоте основной гармоники. При оценке их параметров необходимо учитывать изменение спектра сигнала, связанное с ограниченной длиной выборки этого сигнала.
 
+\item  При анализе спектра сигнала с ограниченной выборкой необходимо использовать оконные функции, поскольку в противном случае сигнал будет взвешен прямоугольной оконной функцией с плохой частотной характеристикой.
 
+\item  Применение оконной функции уменьшает количество информации, получаемое из сигнала, и, как следствие, увеличивается дисперсия оценки параметров сигнала, или, другими словами, ухудшается точность оценки параметров сигналов.
 
+\item  Ухудшение точности оценки можно определить исходя из предложенного в главе коэффициента окна. Данный коэффициент показывает, насколько уменьшиться точность оценки амплитуды гармоники для оптимальной несмещенной оценки при применении такого окна, а также может использоваться для оценки снижения точности параметров.
 
+\item   Алгоритмы для нахождения оптимальной несмещенной оценки параметров могут быть построены на основе методов оптимального приема, изучаемых в радиотехники, в частости, с помощью корреляционного анализа.
+\end{enumerate}
 
 
 %\section{Многопоточность} \label{sec:ch2/sec2}
