--- a/Dissertation/part4.tex
+++ b/Dissertation/part4.tex
@@ -129,7 +129,7 @@
 
 \begin{figure}[ht]
 	\centering
-	\includegraphics [scale=0.9] {Logo_IEEE.png}
+	\includegraphics [scale=0.5] {Logo_IEEE.png}
 	\caption{Логотип института инженеров электротехники и электроники.}
 	\label{img:picture2}
 \end{figure}
@@ -764,7 +764,7 @@ ${h_{max}}$ -- Порядок высшей учитываемой гармони
 	\item Осциллограф АльфаТрек С7-324С (<<КОМЗ - ИЗМЕРЕНИЯ>>, г.~Москва).
 \end{enumerate}
 
-Акционерное общество <<Приборы, Сервис, Торговля>>\cite{prist}  является владельцем в России торговой марки <<АРРА>> и <<АКИП>>.
+Акционерное общество <<Приборы, Сервис, Торговля>> \cite{prist}  является владельцем в России торговой марки <<АРРА>> и <<АКИП>>.
 %[207.	АО «ПриСТ» [Электронный ресурс]. 2019. Режим доступа: https://prist.ru/about/]
 АО <<ПриСТ>> существует на рынке с 1994 года.
 Компания обеспечивает поставку СИ для электро, радио измерений,измерений параметров окружающей среды:
@@ -877,15 +877,13 @@ ${h_{max}}$ -- Порядок высшей учитываемой гармони
 Компания <<Парма>> (ООО <<Парма>>, г.~Санкт-Петербург) занимается производством оборудования и систем для электроэнергетики: измерительные приборы, оборудование релейной защиты и автоматики, системы мониторинга переходных режимов, цифровые регистраторы аварийных процессов и другие приборы \cite{parma}. 
 %[54 - Компания «ПАРМА» [Электронный ресурс]. 2018. Режим доступа: https://parma.spb.ru/company/about-company/.]
 
-\begin{itemize}
-	\item Регистратор качества электрической энергии ПАРМА РК1.01 \cite{parma2} в соответствии с требованиями ГОСТ 32144–2013 \cite{GOST32144-2013}. 
-	% Сайт прибора [https://parma.spb.ru/oborudovanie/registratory-kachestva-elektroenergii/]
-	Прибор малогабаритный, переносной для регистрации режимов однофазной сети $220$~В. Соответствии с классом S по ГОСТ 30804.4.30–2013 (IEC 61000–4–30:2008) \cite{GOST30804.4.30-2013}. Прибор используется для контроля качества электрической энергии, регистрации графиков нагрузок, а также расследование причин некорректной работы оборудования.
+Регистратор качества электрической энергии ПАРМА РК1.01 \cite{parma2} в соответствии с требованиями ГОСТ 32144–2013 \cite{GOST32144-2013}. 
+% Сайт прибора [https://parma.spb.ru/oborudovanie/registratory-kachestva-elektroenergii/]
+Прибор малогабаритный, переносной для регистрации режимов однофазной сети $220$~В. Соответствии с классом S по ГОСТ 30804.4.30–2013 (IEC 61000–4–30:2008) \cite{GOST30804.4.30-2013}. Прибор используется для контроля качества электрической энергии, регистрации графиков нагрузок, а также расследование причин некорректной работы оборудования.
 	
-	\item Измерительный преобразователь ПАРМА Т400 S \cite{parma1}.
+Измерительный преобразователь ПАРМА Т400 S \cite{parma1}.
 	% Сайт прибора [https://parma.spb.ru/oborudovanie/mnogofunktsionalnye-izmeritelnye-preobrazovateli/]
-	Прибор предназначен для измерения параметров электрической энергии в сетях трехфазного и однофазного тока, а также преобразование информации в цифровой код. Передача данных происходит на микроконтроллер через последовательный интерфейс RS-485. Устройство нижнего уровня в Автоматизированных Информационно-измерительных Системах (АИИС) на объект генерации, передачи и распределения электроэнергии.
-\end{itemize}
+Прибор предназначен для измерения параметров электрической энергии в сетях трехфазного и однофазного тока, а также преобразование информации в цифровой код. Передача данных происходит на микроконтроллер через последовательный интерфейс RS-485. Устройство нижнего уровня в Автоматизированных Информационно-измерительных Системах (АИИС) на объект генерации, передачи и распределения электроэнергии.
 
 \begin{figure}[ht]
 	\centerfloat{
@@ -900,20 +898,17 @@ ${h_{max}}$ -- Порядок высшей учитываемой гармони
 Энерготестер ПКЭ-А прибор контроля качества электрической энергии \cite{energy_tester}.
 % Ссылка на прибор [http://www.mars-energo.ru/home/pribory-kontrolya-kachestva-i-ucheta-elektroenergii/energotester-pke-a.html]
 % Руководство эксплуатации [http://www.mars-energo.ru/home/pribory-kontrolya-kachestva-i-ucheta-elektroenergii/energotester-pke-a.html]
-
 \begin{figure}[ht]
 	\centerfloat{
 		\includegraphics[scale=0.8]{ПКЭ-А}
 	}
 	\caption{Энерготестер ПКЭ-А.}\label{fig:picture10}
 \end{figure}
-
 Позволяет производить измерения в электросетях трех типов: трехфазной четырехпроводной, трехфазной трехпроводной и однофазной двухпроводной. Измерение и регистрация основных ПКЭ, установленных ГОСТ 32144--2013 \cite{GOST32144-2013} (ГОСТ Р 54149--2010) с оформлением протоколов по ГОСТ 33073--2014 \cite{GOST33073-2014}, в соответствии с ГОСТ 30804.4.30--2013 \cite{GOST30804.4.30-2013} (ГОСТ Р 51317.4.30--2008), ГОСТ 30804.4.7--2013 \cite{GOST30804.4.7-2013} (ГОСТ Р 51317.4.7--2008). 
 
 Устройство позволяет проверять работоспособность и правильность подключения энергетических измерительных преобразователей напряжения, тока, активной и реактивной мощности на местах их эксплуатации. Измерения параметров вторичных цепей (мощности нагрузки) в системах учета электрической энергии. <<Энерготестер ПКЭ-А>>  проверяет работоспособность и правильность подключения однофазных и трехфазных счетчиков электрической энергии без разрыва токовых цепей.
 
-\textbf{Научно-производственное предприятие <<Энерготехника>>}  (НПП <<Энерготехника>>, г.~Пенза) существует на рынке 26 лет. Основной изготавливаемой продукцией являются [73]: 
-% НЕ РАБОТАЕТ САЙТ
+\textbf{Научно-производственное предприятие <<Энерготехника>>}  (НПП <<Энерготехника>>, г.~Пенза) существует на рынке 26 лет. Основной изготавливаемой продукцией являются \cite{энерготехника}: 
 %[73 - Научно-производственное предприятие «Энерготехника» [Электронный ресурс]. 2009-2019. Режим доступа: https://www.entp.ru/]
 
 \begin{itemize}
@@ -923,7 +918,7 @@ ${h_{max}}$ -- Порядок высшей учитываемой гармони
 	\item Калибраторы переменного тока <<Ресурс-К2>>,<<Ресурс-К2М>>.
 \end{itemize}
 
-Предприятие <<Энерготехника>> предоставляет измерение показателей качества электрической энергии, параметров напряжений, частоты, силы токов, активной и реактивной мощности, активной и реактивной энергии прямого и обратного направлений в трехфазных трехпроводных и четырехпроводных электрических сетях с помощью устройства Системы контроля качества электроэнергии <<Ресурс>> (СККЭ <<Ресурс>>). Устройство состоит из двух блоков: измерительного и  вычислительного.
+Предприятие <<Энерготехника>> предоставляет измерение показателей качества электрической энергии, параметров напряжений, частоты, силы токов, активной и реактивной мощности, активной и реактивной энергии прямого и обратного направлений в трехфазных трехпроводных и четырехпроводных электрических сетях с помощью устройства система контроля качества электроэнергии <<Ресурс>> (СККЭ <<Ресурс>>). Устройство состоит из двух блоков: измерительного и  вычислительного.
 
 <<Ресурс-UF2M-3Т52-5-100-1000>> измеритель показателей качества электрической энергии. Измерение ПКЭ производится согласно ГОСТ 30804.4.30--2013 \cite{GOST30804.4.30-2013} (ГОСТ Р 51317.4.30--2008), класс А, ГОСТ 32144--2013 \cite{GOST32144-2013} (ГОСТ Р 54149--2010). 
 
