--- a/Presentation/styles.tex
+++ b/Presentation/styles.tex
@@ -3,7 +3,16 @@
 %\usecolortheme{whale}
 %\usecolortheme{orchid}
 %\usecolortheme{wolverine}
-\usecolortheme{lily}
+%\usecolortheme{lily}
+%\usecolortheme{default}
+%\usecolortheme{albatross}
+%\usecolortheme{dolphin}
+%\usecolortheme{sidebartab}
+%\usecolortheme{beaver}
+%\usecolortheme{crane}
+%\usecolortheme{dove}
+%\usecolortheme{beetle}
+
 
 % Стиль презентации
 %\usetheme[hideothersubsections]{Goettingen}
@@ -24,21 +33,18 @@
 %\usetheme{Goettingen}
 %\usetheme{Hannover}
 %\usetheme{Ilmenau}
-\usetheme{JuanLesPins} 
+%\usetheme{JuanLesPins} 
 %\usetheme{Luebeck}
 %\usetheme{Madrid}
-%2\usetheme{Malmoe} 
+%\usetheme{Malmoe} 
 %\usetheme{Marburg}
-%3\usetheme{Montpellier} 
-%\usetheme{PaloAlto}
+%\usetheme{Montpellier} 
 %\usetheme{Pittsburgh}
 %\usetheme{Rochester}
 %\usetheme{Singapore}
 %\usetheme{Szeged}
-%\usetheme{Warsaw}
 
-
-
+\usetheme{Warsaw}
 
 % \usetheme[secheader]{Boadilla}
 % \usecolortheme{seahorse}
