--- a/Presentation/title.tex
+++ b/Presentation/title.tex
@@ -35,8 +35,10 @@
 \title{\thesisTitle}
 \author{%
     \texorpdfstring{%
-        \emph{Выступающий:}~\thesisAuthorShort\\%
+        \begin{flushleft}
+        	\emph{Выступающий:}~\thesisAuthorShort\\%
         \emph{Руководитель:}~\supervisorRegaliaShort~\supervisorFioShort\\%
+        \end{flushleft}
          }{\thesisAuthor}%
 }
 \date{\texorpdfstring{\thesisCity, \thesisYear}{}}
