--- a/biblio/external.bib
+++ b/biblio/external.bib
@@ -479,10 +479,10 @@
   urldate = {2020-01-09},
 }
 
-@Online{noauthor__2009-2,
-  title   = {{ООО} {Н}аучно-производственное предприятие <<{Э}нерготехника>>},
+@Online{энерготехника,
   date    = {2009},
   file    = {Главная:files/528/www.entp.ru.html:text/html},
+  title   = {{ООО} {Н}аучно-производственное предприятие <<{Э}нерготехника>>},
   url     = {http://www.entp.ru/},
   urldate = {2020-01-09},
 }
