--- a/Dissertation/part3.tex
+++ b/Dissertation/part3.tex
@@ -179,8 +179,8 @@ W_{ji} = W \left( {\frac{2 \cdot \pi}{T_w} \cdot (i + \bigtriangleup r_j)}\right
 В качестве весовой функции для метода корреляционных функций применяется окно Кайзера с параметром $10$. Окно Кайзера на 2048 точек с параметром $10$ представлено на рисунке \ref{img:picture3.3.1}. Основные свойства весовой функции Кайзера, а также формула для определения коэффициентов приведены в таблице \ref{app:А}.
 \begin{figure}[ht]
 	\centering
-	\includegraphics [scale=0.9] {Kaiser_window_with_parameter_10_at_2048_points.pdf}
-	\caption{Окно Кайзера с параметром 10 на 2048 точек.}
+	\includegraphics [scale=0.75] {Kaiser_window.png}
+	\caption{Окно Кайзера.}
 	\label{img:picture3.3.1}
 \end{figure}
 
@@ -343,7 +343,7 @@ $h(n)$ -- импульсный отклик системы, длиной $L$.
 
 \begin{figure}[ht]
 	\centering
-	\includegraphics [scale=0.3] {convolution}
+	\includegraphics [scale=0.35] {convolution}
 	\caption{Временные затраты на вычисление по алгоритму одномерной свертки на языке С (процессор Intel® Core™ $i5-3550$).}
 	\label{img:convolution}
 \end{figure}
@@ -1307,6 +1307,43 @@ $C_{n}$ может быть записана:
 
 При $\delta <0$ получаем $K(\epsilon) < T(\delta, \epsilon) < 1$ 
 
+Рассмотрим сигнал с частотой равной $5.2$, который изображен на рисунке \ref{img:signal}: 
+\begin{figure}[ht]
+	\centering
+	\includegraphics [scale=0.5] {signal.png}
+	\caption{Сигнал c частотой $5.2$.}
+	\label{img:signal}
+\end{figure}
+На рисунке 	\ref{img:spectrum} представлен спектр сигнала, полученный по формуле \textbf{?}:
+\begin{figure}[ht]
+	\centering
+	\includegraphics [scale=0.5] {spectrum.png}
+	\caption{Спектр сигнала.}
+	\label{img:spectrum}
+\end{figure}
+На рисунке \ref{img:interpolated_signal} представлен экстраполированный сигнал с добавленными нулевыми отчетами:
+\begin{figure}[ht]
+	\centering
+	\includegraphics [scale=0.5] {interpolated_signal.png}
+	\caption{Экстраполированный сигнал.}
+	\label{img:interpolated_signal}
+\end{figure}
+Спектр экстраполированного сигнала с боковыми лепестками представлен на рисунке \ref{img:spectrum_of_interpolated_signal}, полученный по формуле \ref{eq:equation22}. Дискретный спектр расширяется, так как увеличивается время измерений из-за нулевых отчетов. Поэтому мы получаем более точную выборку спектра сигнала, так как количество точек в частотной области увеличилось. Полученный спектр имеет другой максимум гармоники сигнала. 
+\begin{figure}[ht]
+	\centering
+	\includegraphics [scale=0.5] {spectrum_of_interpolated_signal.png}
+	\caption{Спектр экстраполированного сигнала.}
+	\label{img:spectrum_of_interpolated_signal}
+\end{figure}
+
+Применяя двойное интерполирование сигнала c параметром $k_{i1}=4$ (рисунок \ref{img:interpolated_signal}), получим спектр сигнала с двойной интерполяцией ($k_{i2}=4$):
+\begin{figure}[ht]
+	\centering
+	\includegraphics [scale=0.5] {spectrum_double_interpolated.png}
+	\caption{Спектр с двойной интерполяцией сигнала ($k_{i2}=4$).}
+	\label{img:spectrum_double_interpolated}
+\end{figure}
+
 
 \section{Метод чисел Фибоначчи} \label{sec:ch3/sect7}
 Для определения коэффициента корреляции методом корреляционных функций необходимо перебрать все наборы эталонов. Тем самым, чтобы уменьшить вычислительную сложность метода, требуется сократить операцию перебора. Для этого были использованы методы определения максимума функции по заданным точкам \cite{Maximov1982Algorithms}. 
@@ -1501,6 +1538,33 @@ phz(\delta) = \pi \cdot f + \pi \cdot k
 
 Вычислительная сложность быстрого метода корреляционных функций значительно ниже. Количество переборов быстрого метода корреляционных функций пропорционально натуральному логарифму от квадрата количества переборов метода корреляционных функций. Вычислительная сложность быстрого метода корреляционных функций равна $O(N+N\log(N))$, где $N$ – используемое число отсчетов БПФ.
 
+\section{Прямой корреляционный метод с использованием быстрых алгоритмов обработки сигналов} \label{sec:ch3/sect8}
+ Метод был исследован в среде разработке JetBrains PyCharm Community Edition 2018.3.1 x64 на языке программирования Python. 
+ Изначально задаем входные параметры: частоту ($harmonics$), фазу ($phases$) и амплитуду ($amplitudes$), чтобы описать модель сигнала. На рисунке \ref{img:picture3.9.3} представлен зашумляем сигнал.
+ \begin{figure}[ht]
+ 	\centering
+ 	\includegraphics [scale=0.5] {Figure_1.png}
+ 	\caption{Сигнал.}
+ 	\label{img:picture3.9.3}
+ \end{figure}
+ Библиотека NumPy обеспечивает базовый функционал БПФ, расширяемый библиотекой SciPy. При этом обе библиотеки содержат функцию fft, основанную на динамической библиотеке FFTPACK языка Fortran.
+ Функционал ДПФ библиотеки SciPy расположен в модуле scipy.fftpack.
+ Далее ограничиваем сигнал оконной функцией Кайзера. Степень расширения Окна $kaiser_beta$ равна $14$, а ширина окна ($width_window$) равна 10. Создаем симетричное окно $window = kaiser(n+1, kaiser_beta)$, где $n=2048$. Далее применяем окно, чтобы уменьшить количество пиков. Исходная функция сигнала умножается на функцию окна $signal2 = signal * window[0:n]$. Добавляем нулевые значения, чтобы увеличить время измерения. Соответственно, спектр расширяется $spectrum3 = 2 * pi * fft(signal3) / n$, представлен на рисунке \ref{img:picture3.9.4}. Определим пик в интересующей области $sp = lambda x: abs(spectrum3[x])$. Далее находим предполагаемый пик и группы пиков. Определяем истинную вершину, фильтруя маленькие вершины. Листинг программы представлен в приложения \ref{app:Б}.
+
+Граф-схема алгоритм поиска гармоник представленна на рисунке 	\ref{img:Diagram_GSA2}.
+\begin{figure}[ht]
+	\centering
+	\includegraphics [scale=0.6] {Diagram_GSA2.png}
+	\caption{ГСА алгоритма поиска гармоник.}
+	\label{img:Diagram_GSA2}
+\end{figure}
+
+\begin{figure}[ht]
+	\centering
+	\includegraphics [scale=0.5] {Figure_2.png}
+	\caption{Спектр расширенного сигнала.}
+	\label{img:picture3.9.4}
+\end{figure}
 \section{Разряженное Быстрое Преобразование Фурье} \label{sec:ch3/sect9}
 Spare FFT (SFFT, разряженное БПФ) -- алгоритм оценки спектра сигнала, содержащего малое число гармоник. В отличие от усеченного БПФ, которое находит небольшое число гармоник с заранее известным номером, SFFT находит гармоники, которые имеют более высокую амплитуду по сравнению с другими гармониками. Еще более существенное отличие SFFT от остальных БПФ заключается в том, что этот алгоритм является вероятностным и работает только для сигналов, для которых выполняются определенные условия (отсутствие в спектре большое числа гармоник с большой амплитудой, низкий уровень шума и другие).
 
@@ -1549,7 +1613,7 @@ SFFT является относительно новым подходом к в
 % Schumacher J., Püschel M. High-performance sparse fast Fourier transforms //2014 IEEE Workshop on Signal Processing Systems (SiPS). – IEEE, 2014. – С. 1-6.
 
 
-На рисунке \ref{img:picture39} (взят с сайта http://www.spiral.net/software/sfft.html) приведены
+На рисунке \ref{img:picture39} приведены
 экспериментальные результаты оценки производительности SFFT по сравнению с классическим БПФ.
 На нем по вертикальной оси отложено время выполнения FFT - $N^{22}$,
 по горизонтальной — количество ненулевых частот K. Вертикальные линии
@@ -1558,7 +1622,7 @@ SFFT является относительно новым подходом к в
 
 \begin{figure}[ht]
 	\centering
-	\includegraphics [scale=1.1] {Sparse_Fourier_Transform_Performance}
+	\includegraphics [scale=1.3] {Sparse Fourier Transform.pdf}
 	\caption{Производительность разреженного преобразования Фурье.}
 	\label{img:picture39}
 \end{figure}
@@ -1698,24 +1762,6 @@ $N$ – длина DFT.
 	\caption{Структурная схема Анализатора SFFT и Resampling.}
 	\label{img:picture3.9.2}
 \end{figure}
-
-Результат приложения \ref{app:Б} представлен на рисунке: 
-\begin{figure}[ht]
-	\centering
-	\includegraphics [scale=1] {Figure_1.png}
-	\caption{Сигнал.}
-	\label{img:picture3.9.3}
-\end{figure}
- 
- Спектр расширенного сигнала представлен на рисунке (\ref{img:picture3.9.4}):
-\begin{figure}[ht]
-	\centering
-	\includegraphics [scale=1] {Figure_2.png}
-	\caption{Спектр.}
-	\label{img:picture3.9.4}
-\end{figure}
-
-
 
 \section{Выводы по разделу} \label{sec:ch3/sect11}
 На основании анализа, произведенного в третьем разделе, были получены следующие результаты:
