--- a/common/data.tex
+++ b/common/data.tex
@@ -32,12 +32,12 @@
 \newcommand{\thesisCity}               % Диссертация, город написания диссертации
 {Омск}
 \newcommand{\thesisYear}               % Диссертация, год написания диссертации
-{2020}
+{2021}
 \newcommand{\thesisOrganization}       % Диссертация, организация
 {Федеральное государственное бюджетное образовательное учреждение высшего
 образования <<Омский государственный университет путей сообщения>> (ОмГУПС)}
 \newcommand{\thesisOrganizationShort}  % Диссертация, краткое название организации для доклада
-{\todo{НазУчДисРаб}}
+{Оценка~параметров~гармоник}
 
 \newcommand{\thesisInOrganization}     % Диссертация, организация в предложном падеже: Работа выполнена в ...
 {<<федеральном государственном бюджетном образовательном учреждении высшего профессионального образования «Омский государственный университет путей сообщения (ОмГУПС (ОмИИТ)>>}
