--- a/images/IT/voltagedip_overexertion.tex
+++ b/images/IT/voltagedip_overexertion.tex
@@ -37,7 +37,7 @@
 \draw[snake=brace](9,0.8) -- (12.5,0.8);
 \draw[snake=brace](0.1,1.6) -- (2.95,1.6);
 
-%\draw[<->] (5.54,0) -- (5.54,2.5) coordinate (y axis);
+\draw[<->] (5.54,0) -- (5.54,2.5) coordinate (y axis);
 \draw[dashed] (7,0) -- (7,-3) coordinate (y axis);
 \draw[dashed] (3,0) -- (3,-3) coordinate (y axis);
 \draw[<->] (3,-2.8) -- (7,-2.8) coordinate (x axis);
@@ -51,7 +51,7 @@
 
 
 % Фрагменты напржения
-%\draw[ultra thick, red] (0,0) sin (0.25,1.5);
+\draw[ultra thick, red] (0,0) sin (0.25,1.5);
 \draw[ultra thick, red] (0.25,1.5) cos (0.5,0);    
 \draw[ultra thick, red] (0.5,0) sin (0.75,-1.5);
 \draw[ultra thick, red] (0.75,-1.5) cos (1,0);
